<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".clock_info">

    <Button
        android:id="@+id/button7"
        android:layout_width="75dp"
        android:layout_height="37dp"
        android:backgroundTint="#00C22B"
        android:text="@string/show_table_of_frogs"
        android:textSize="5sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button8"
        android:layout_width="104dp"
        android:layout_height="36dp"
        android:backgroundTint="#2dd700"
        android:text="@string/show_table_of_frog_names"
        android:textSize="5sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button9"
        android:layout_width="60dp"
        android:layout_height="33dp"
        android:layout_marginStart="144dp"
        android:backgroundTint="#7CE800"
        android:text="@string/go_to_main_page"
        android:textSize="5sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>